# how-to-set-a-parent-to-an-object

./: CMakeLists.txt  README.md  customclass.cpp  customclass.h  main.cpp
